# vehicles-dashbord

./: README.md  jets.py  main.py  pyproject.toml  requirements.txt  sidebar_config.py
data/: raw_metrics_dataset.csv
img/: img_1.tex  img_2.tex  img_3.tex  img_4.tex  img_5.tex
notebooks/: EDA.ipynb  data_wrangling.ipynb  results_analysis.ipynb
pages/: 1_Analisis_Crudo.py  1_Introduccion.py  2_Analisis_Procesado.py  2_Analisis_crudo.py  3_Datos_Procesados.py  4_Resultados.py  Colisiones_interactivas.py
src/: data_loader.py
