[project]
name = "vehicles-dashbord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
